fixed menu not showing on mobile devices, added invite landing page and apple-app-site-association file

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,8 @@ body{
 
 /* small screens */
 @media (max-width:640px){
-  .main-nav{display:none} /* keep it simple for now */
+  .main-nav{
+    flex-direction: : column;
+    } /* keep it simple for now */
   .site-header .container{justify-content:space-between}
 }
